fix alignment, fixes #11653
git-svn-id: svn://develop.studip.de/studip/trunk@62363 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/scss/contents.scss
+++ b/resources/assets/stylesheets/scss/contents.scss
@@ -17,19 +17,18 @@
         max-width: none;
     }
 }
+
 .content-items {
     max-width: 782px;
     list-style: none;
     padding: 0;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(min(250px, 100%), 1fr));
     grid-gap: 10px;
 
     .content-item {
         text-align: center;
         border: solid thin $content-color-40;
-        width: 100%;
-        height: 100%;
 
         .content-item-link {
             display: block;
@@ -62,6 +61,18 @@
 
             }
         }
+    }
+}
+
+//// Responsive displays
+@include media-breakpoint-small-down() {
+    .content-items {
+        grid-template-columns: 100%;
+    }
+}
+@include media-breakpoint-tiny-down() {
+    .content-items {
+        grid-template-columns: 100%;
     }
 }
 
